--- a/.gitignore
+++ b/.gitignore
@@ -27,13 +27,19 @@ dist-ssr
 
 coverage
 package-lock.json
-#
-config
 
+# Add this files:
 public/products
+
+config/.env
+config/.env.production
+config/.env.testing
+
+public/favicon.ico
+public/assets/media/logo/logo.png
+public/assets/media/pwa/favicon.png
+public/assets/media/pwa/logo-192.png
+public/assets/media/pwa/logo-512.png
 
 manifest.ts
 index.html
-
-*.png
-*.ico
