--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-i18next": "^12.0.0",
     "react-multi-carousel": "^2.8.2",
     "react-router-dom": "^6.4.3",
@@ -47,6 +48,7 @@
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@types/react-helmet": "^6.1.6",
     "@vitejs/plugin-react": "^2.2.0",
     "jsdom": "^20.0.3",
     "sass": "^1.56.1",
