--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-i18next": "^12.0.0",
     "react-multi-carousel": "^2.8.2",
     "react-router-dom": "^6.4.3",
