--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@ public/assets/media/logo/logo.png
 public/assets/media/pwa/favicon.png
 public/assets/media/pwa/logo-192.png
 public/assets/media/pwa/logo-512.png
+
+src/core/locales/resources/en/public.json
+src/core/locales/resources/fa/public.json
