--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/lab": "^5.0.0-alpha.109",
     "@mui/material": "^5.10.13",
     "@openzeppelin/contracts": "^4.8.0",
+    "@reactour/tour": "^3.1.9",
     "@walletconnect/web3-provider": "^1.8.0",
     "aos": "^3.0.0-beta.6",
     "i18next": "^22.0.5",
