--- a/package.json
+++ b/package.json
@@ -2,20 +2,24 @@
   "name": "client",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "start": "vite",
     "build": "tsc && vite build",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview --port 8080",
     "test": "vitest --mode testing",
     "test:ui": "vitest --ui",
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.10.5",
-    "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
-    "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
+    "@mantine/core": "^6.0.15",
+    "@mantine/hooks": "^6.0.15",
     "@mui/icons-material": "^5.10.9",
     "@mui/lab": "^5.0.0-alpha.109",
     "@mui/material": "^5.10.13",
@@ -39,7 +43,7 @@
     "swr": "^1.3.0",
     "universal-cookie": "^4.0.4",
     "vanilla-tilt": "^1.8.0",
-    "web3": "^1.8.0"
+    "web3": "^4.0.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -48,15 +52,20 @@
     "@types/aos": "^3.0.4",
     "@types/lodash": "^4.14.190",
     "@types/node": "^18.11.9",
-    "@types/react": "^18.0.24",
-    "@types/react-dom": "^18.0.8",
+    "@types/react": "^18.0.37",
+    "@types/react-dom": "^18.0.11",
     "@types/react-helmet": "^6.1.6",
-    "@vitejs/plugin-react": "^2.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
+    "@vitejs/plugin-react-swc": "^3.0.0",
+    "eslint": "^8.38.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.3.4",
     "jsdom": "^20.0.3",
     "sass": "^1.56.1",
-    "typescript": "^4.6.3",
-    "vite": "^3.2.3",
-    "vite-plugin-pwa": "^0.13.3",
+    "typescript": "^5.0.2",
+    "vite": "^4.3.9",
+    "vite-plugin-pwa": "^0.14.1",
     "vitest": "^0.26.3"
   }
 }
